# internal/products/domain/entity/category.go
@@ -6,16 +6,15 @@ import (
 
 type Category struct {
 	adapter.BaseEntity
-	Name        string  `json:"name" gorm:"name"`
-	Slug        string  `json:"slug" gorm:"slug;uniqueIndex"`
-	Description *string `json:"description,omitempty" gorm:"description;type:text"`
-	Image       *string `json:"image,omitempty" gorm:"image"`
-	ParentID    *uint64 `json:"parent_id,omitempty" gorm:"parent_id"`
-	Parent      *Category `json:"parent,omitempty" gorm:"foreignKey:ParentID"`
-	ProductCount int     `json:"product_count,omitempty" gorm:"-"`
+	Name         string    `json:"name" gorm:"name"`
+	Slug         string    `json:"slug" gorm:"slug;uniqueIndex"`
+	Description  *string   `json:"description,omitempty" gorm:"description;type:text"`
+	Image        *string   `json:"image,omitempty" gorm:"image"`
+	ParentID     *uint64   `json:"parent_id,omitempty" gorm:"parent_id"`
+	Parent       *Category `json:"parent,omitempty" gorm:"foreignKey:ParentID"`
+	ProductCount int       `json:"product_count,omitempty" gorm:"-"`
 }
 
 func (c *Category) TableName() string {
 	return "categories"
 }
-
